# halter-cli

./: .gitignore  README.md  setup.cfg
balpy/: balpy.py
balpy/deployments/20210418-authorizer/: input.ts
balpy/deployments/20210418-authorizer/output/: testnet.json
balpy/deployments/20210418-vault/: input.ts
balpy/deployments/20210418-weighted-pool/output/: testnet.json
balpy/deployments/20210624-stable-pool/output/: testnet.json
balpy/deployments/20210721-liquidity-bootstrapping-pool/output/: testnet.json
balpy/deployments/20210727-meta-stable-pool/output/: testnet.json
balpy/deployments/20210907-investment-pool/output/: testnet.json
samples/joinPool/: sampleJoin.json
samples/poolCreation/: poolCreationSample.py  sampleStablePool.json
